[project]
name = "path2dream-agents"
version = "0.1.0"
description = "Path2Dream AI agents"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]
